@startuml
'https://plantuml.com/class-diagram

class FindVisit {
  +{static} findVisitByIc(nric, records): void
  +{static} findVisitByDiagnosis(Diagnosis, records): void
  +{static} findVisitByMedication(Medication, records): void
}

class Patient {}
class Visit {}
class Main {}
class Records {}

Main --> FindVisit : calls >
FindVisit --> Visit : searches >
Records "1" o-- "many" Patient
Patient "1" o-- "many" Visit

@enduml